--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,3 @@
+# API Key cho Gemini AI
+# Thay YOUR_NEW_API_KEY bằng API key mới của bạn
 VITE_GEMINI_API_KEY=gen-lang-client-0130826511
-```
-
-### **Bước 2: Cập nhật `.gitignore`**
-Đảm bảo file `.gitignore` có dòng này (đã có rồi):
-```
-*.local
